--- a/static/css-js_for_manager_site/manager_frontpage.css
+++ b/static/css-js_for_manager_site/manager_frontpage.css
@@ -3,6 +3,10 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .container {
