--- a/static/files_for_frontpage/page(i).css
+++ b/static/files_for_frontpage/page(i).css
@@ -4,6 +4,10 @@
 body, ul {
     margin: 0;
     padding: 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* Style the header */
